--- a/src/app/pages/admin/companies/companies.component.html
+++ b/src/app/pages/admin/companies/companies.component.html
@@ -1,7 +1,9 @@
 <div class="saturno-container animated fadeIn p-2">
 
-    <div class="card bg-success lead text-white">
-        <div class="card-header">Empresas</div>
+    <div class="card bg-success text-white">
+        <div class="card-header">
+            <span class="mdi mdi-storefront-outline"></span>
+            Mis empresas / comercios</div>
         <div class="card-body table-responsive-sm">
 
             <table class="table table-sm text-white">
@@ -26,8 +28,10 @@
 
     <div class="my-4"></div>
 
-    <div class="card lead">
-        <div class="card-header bg-success">Alta de empresa</div>
+    <div class="card">
+        <div class="card-header">
+            <span class="mdi mdi-plus-circle-outline"></span>
+            Alta de empresa</div>
         <div class="card-body">
 
             <app-company-create [companyEdit]="companyEdit" (newCompany)="newCompany($event)">
