--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -24,7 +24,8 @@
         <span class="footer-text">Matias Frith | 2020</span>
       </div>
       <div class="col" style="text-align: right;">
-        <span class="mdi mdi-heart footer-icon ml-1" style="color:red"></span>
+        <span class="mdi mdi-heart footer-icon ml-1" style="color:red; opacity: .7;"></span>
+        <span class="mdi mdi-bootstrap footer-icon ml-1" ></span>
         <span class="mdi mdi-angularjs footer-icon ml-1" ></span>
         <span class="mdi mdi-language-javascript footer-icon ml-1" ></span>
         <span class="mdi mdi-nodejs footer-icon ml-1" ></span>
