--- a/src/app/pages/how-works/how-works.component.html
+++ b/src/app/pages/how-works/how-works.component.html
@@ -106,6 +106,12 @@
                             </div>
                         </div>
                         <div class="col">
+                            <span class="footer-icon-menu" routerLink="/home">
+                                <mat-icon>home</mat-icon>
+                                <div>Home</div>
+                            </span>
+                        </div>
+                        <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoNext(stepper)">
                                 <mat-icon>navigate_next</mat-icon>
                                 <div>Siguiente</div>
@@ -150,6 +156,12 @@
                                 <mat-icon>navigate_before</mat-icon>
                                 <div>Anterior</div>
                             </div>
+                        </div>
+                        <div class="col">
+                            <span class="footer-icon-menu" routerLink="/home">
+                                <mat-icon>home</mat-icon>
+                                <div>Home</div>
+                            </span>
                         </div>
                         <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoNext(stepper)">
