--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -3,7 +3,7 @@
     <div *ngIf="!companySelected" class="jumbotron text-dark">
         
         <h2>Ingrese la empresa</h2>
-                <hr class="saturno-hr-grey">
+               
         
         <mat-icon class="mat-icon-search-company">apartment</mat-icon>
         <mat-icon class="mat-icon-search-company">house</mat-icon>
@@ -11,8 +11,8 @@
         <mat-icon class="mat-icon-search-company">deck</mat-icon>
         <mat-icon class="mat-icon-search-company">location_city</mat-icon>
         <mat-icon class="mat-icon-search-company">account_balance</mat-icon>
-        
-        <p class="lead">La empresa debe estar registrada, por ejemplo "Pizza Dots".</p>
+        <hr>
+        <p class="lead">La empresa debe estar registrada, por ejemplo "Pizza Tomato".</p>
 
         <div class="my-2">
 
