--- a/src/app/pages/admin/desktops/desktops.component.html
+++ b/src/app/pages/admin/desktops/desktops.component.html
@@ -1,14 +1,21 @@
 <div class="saturno-container animated fadeIn p-2">
 
-    <div class="card bg-info lead text-white">
-        <div class="card-header">Escritorios</div>
-        <div class="card-body table-responsive-sm">
+    <div class="card bg-secondary text-white">
 
+        <div class="card-header">
+            <span class="mdi mdi-monitor"></span>
+            Escritorios / Ventanillas
+        </div>
+
+        <div class="card-body table-responsive-sm">
+            <div *ngIf="!desktops || desktops?.length === 0" class="row align-items-center justify-content-center">
+                <span class="mdi mdi-check-circle-outline xxl mx-2 text-warning"></span>
+                <span>Un escritorio genérico fué creado</span>
+            </div>
             <table class="table table-sm text-white">
                 <tr *ngFor="let desktop of desktops">
                     <td>{{desktop?.cd_desktop}}</td>
                     <td style="text-align: right;">
-                        <mat-icon class="ml-2 list-crud-edit" (click)="editDesktop(desktop._id)">edit</mat-icon>
                         <mat-icon class="ml-2 list-crud-delete" (click)="deleteDesktop(desktop._id)">delete
                         </mat-icon>
                     </td>
@@ -20,8 +27,11 @@
 
     <div class="my-4"></div>
 
-    <div class="card lead">
-        <div class="card-header">Alta de Escritorios para {{user.id_company?.tx_company_name}}</div>
+    <div class="card">
+
+        <div class="card-header ">
+            <span class="mdi mdi-plus-circle-outline"></span>
+            Alta de Escritorio</div>
         <div class="card-body">
 
             <app-desktop-create-form (desktopCreated)="desktopCreated($event)"></app-desktop-create-form>
