--- a/src/styles.css
+++ b/src/styles.css
@@ -111,7 +111,7 @@ td {
 .footer-icon {
     text-align: center;
     opacity   : 0.4;
-    font-size: x-large;
+    font-size: large;
 }
 
 .desktop-panel-buttons {
